# ClayEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  index.html
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
ImGui/: CMakeLists.txt
Java/: Clay.i  Clay.java  ClayJNI.java  Clay_wrap.cxx  README.md
src/ClayEditor/: ClayEditorApp.cpp  ClayEditorApp.h  EditorLayer.cpp  EditorLayer.h
src/ClayEditor/Assets/Shaders/: Texture.glsl
src/ClayEngine/: Application.cpp  Application.h  Clay.h  ClayHeaders.h  Core.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  MouseButtonCodes.h  Window.h
src/ClayEngine/Assets/Kernels/: kernels.cpp
src/ClayEngine/Assets/Meshes/: Circle.pcd  OusterScan_01.pcd  OusterScan_02.pcd  Square.pcd  cup.off
src/ClayEngine/Assets/Shaders/: LineShader.glsl  PointCloudShader.glsl  TriangleShader.glsl
src/ClayEngine/Core/: Application.cpp  Application.h  CMakeLists.txt  Clay.h  ClayHeaders.h  Core.h  Input.h  Instrumentor.h  KeyCodes.h  Layer.cpp  LayerStack.cpp  Log.cpp  Log.h  Timer.h  Timestep.h  Window.h
src/ClayEngine/Events/: ApplicationEvent.h  CMakeLists.txt  Event.h  KeyEvent.h  MouseEvent.h
src/ClayEngine/ImGui/: CMakeLists.txt  FileBrowserUI.cpp  FileBrowserUI.h  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiMenu.cpp  ImGuiMenu.h
src/ClayEngine/Manifolds/: CMakeLists.txt  SurfaceOptimizer.cpp  SurfaceOptimizer.h  SurfaceParameters.cpp  SurfaceParameters.h
src/ClayEngine/Python/: MeshGenerator.py
src/ClayEngine/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  OpenGLContext.cpp  OpenGLContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/ClayEngine/Scene/: CMakeLists.txt
src/ClayEngine/Scene/Mesh/: LineMesh.cpp  LineMesh.h  MeshTools.cpp  MeshTools.h  Model.cpp  Model.h  PointCloud.cpp  PointCloud.h  TriangleMesh.cpp  TriangleMesh.h
src/ClayEngine/Tools/: CMakeLists.txt  FileTools.cpp  FileTools.h  JavaTools.cpp  JavaTools.h
src/Example/: Example2D.cpp  Example2D.h  ExampleLayer.cpp  ExampleLayer.h  GameSandbox.cpp  GameSandbox.h
src/Example/Assets/Shaders/: Texture.glsl
